Paused on immich

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,8 +2,7 @@
 display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
-roles_path =  roles/pve: roles/vm: roles/common: roles/helper
-playbook_dir = playbooks/
+roles_path =   roles/vm:roles/common:roles/helper:roles/pve
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
 host_key_checking = False    
@@ -18,6 +17,4 @@ verbosity = 1
 #remote_tmp = /tmp/.ansible/tmp2
 
 vault_password_file = ~/.ansible/vault-pass
-
-
 
