--- a/ansible/roles/common/bootstrap/tasks/install-authorized-keys.yml
+++ b/ansible/roles/common/bootstrap/tasks/install-authorized-keys.yml
@@ -1,13 +1,6 @@
-- name: Install authorized_keys for automation user
+- name: Install authorized_keys for ansible user
   ansible.posix.authorized_key:
-    user: "{{ ansible_user }}"
-    key: "{{ ansible_user_key }}"
-    state: present
-    manage_dir: true
-
-- name: Install authorized_keys for fallback user
-  ansible.posix.authorized_key:
-    user: "{{ pve_fallback_user }}"
-    key: "{{ fallback_user_key }}"
+    user: "{{ bootstrap_user }}"
+    key: "{{ bootstrap_user_pubkey_file }}"
     state: present
     manage_dir: true
