--- a/ansible/roles/vm/immich-docker/tasks/main.yml
+++ b/ansible/roles/vm/immich-docker/tasks/main.yml
@@ -1,32 +1,1 @@
-- name: Ensure project dir exists
-  file:
-    path: "{{ immich_project_dir }}"
-    state: directory
-    mode: "0755"
-
-- name: Render docker-compose.yml
-  template:
-    src: docker-compose.yml.j2
-    dest: "{{ immich_project_dir }}/docker-compose.yml"
-    mode: "0644"
-  notify: Restart Immich
-
-- name: Render .env
-  template:
-    src: immich.env.j2
-    dest: "{{ immich_project_dir }}/.env"
-    mode: "0600"
-  notify: Restart Immich
-
-- name: Bring up Immich stack
-  community.docker.docker_compose:
-    project_src: "{{ immich_project_dir }}"
-    state: present
-
-  # Optional: make template changes bounce the stack
-  handlers:
-    - name: Restart Immich
-      community.docker.docker_compose:
-        project_src: "{{ immich_project_dir }}"
-        state: present
-        restarted: true
+- include_tasks: samba-mount.yml
