--- a/ansible/roles/common/bootstrap/tasks/create-authorized-users.yml
+++ b/ansible/roles/common/bootstrap/tasks/create-authorized-users.yml
@@ -1,21 +1,9 @@
-- name: Ensure ansible user exists (no home, passwordless sudo)
+- name: Ensure ansible user exists 
   ansible.builtin.user:
-    name: "{{ ansible_user }}"
-    shell: /bin/bash
-    groups: sudo
-    append: true
-    create_home: false
-    state: present
-    update_password: on_create
-
-
-- name: Ensure fallback user exists (has home, password from vault)
-  ansible.builtin.user:
-    name: "{{ pve_fallback_user }}"
+    name: "{{ bootstrap_user }}"
     shell: /bin/bash
     groups: sudo
     append: true
     create_home: true
     state: present
-    password: "{{ pve_fallback_password | trim }}"
     update_password: on_create
