--- a/ansible/roles/vm/immich-docker/defaults/main.yml
+++ b/ansible/roles/vm/immich-docker/defaults/main.yml
@@ -1,26 +1,28 @@
-immich_project_dir: /opt/immich
-
-# SMB/NAS share with your photos
-smb_share: //192.168.10.5/photos
-smb_user: immich
-smb_pass: "CHANGE_ME"             # use Ansible Vault in prod
-smb_domain: ""                    # optional (e.g., WORKGROUP or AD domain)
-smb_uid: 1000                     # set to the host user that should own files
-smb_gid: 1000
-
-# Where the SMB share will be mounted on the host
-upload_location: /mnt/photos
-
-# Database data location on the host (SSD recommended; change path if needed)
-db_data_location: /opt/immich/db
-
-# Immich app port on host (must match compose’s 2283 mapping)
-immich_port: "2283"
-
 # Immich version tag (official compose uses ${IMMICH_VERSION:-release})
 immich_version: "release"
 
+# Where the Immich project will live
+container_project_dir: "{{ docker_project_dir }}/immich"
+
+# Where the SMB share will be mounted on the host
+upload_location: "{{ container_project_dir }}/library" 
+
+# Database data location on the host (SSD recommended; change path if needed)
+db_data_location: "{{ container_project_dir }}/postgres" 
+
+
 # DB creds (store with Vault for real use)
-db_user: immich
-db_pass: "CHANGE_ME_DB"
-db_name: immich
+db_username: "{{ vault_immich_db_user | default('postgres') }}"
+db_password: "{{ vault_immich_db_pass }}"
+db_database_name: "{{ vault_immich_db_name | default('immich') }}"
+
+
+# Samba mount point on the host
+samba_server: "{{ hostvars['samba1'].ansible_host }}"
+samba_share: "Common"
+samba_user: "shahriar"
+samba_pass: "{{ vault_default_password }}"
+cred_file: "/root/.smb_cred"
+samba_mount_point: "/mnt/immich"
+mount_uid: 1000          # user that needs access (Docker user)
+mount_gid: 1000
