--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -9,7 +9,8 @@ host_key_checking = False
 retry_files_enabled = False  
 forks = 10                   
 timeout = 30                 
-stdout_callback = yaml
+stdout_callback = ansible.builtin.yaml
+bin_ansible_callbacks = True
 log_path = ./ansible.log
 deprecation_warnings = False
 error_on_missing_handler = True
