more upgrade from no-sub for pbs

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,20 +2,27 @@
 display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
-roles_path =   roles/vm:roles/common:roles/helper:roles/pve
+roles_path = roles/vm:roles/common:roles/helper:roles/pve
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
-host_key_checking = False    
+host_key_checking = True    
 retry_files_enabled = False  
 forks = 10                   
-timeout = 30                 
-stdout_callback = ansible.builtin.yaml
-bin_ansible_callbacks = True
+timeout = 30
 log_path = ./ansible.log
-deprecation_warnings = False
+deprecation_warnings = True
 error_on_missing_handler = True
-verbosity = 1
-#remote_tmp = /tmp/.ansible/tmp2
+# remote_tmp = /tmp/.ansible/tmp2
 
 vault_password_file = ~/.ansible/vault-pass
+
+stdout_callback = ansible.builtin.default
+bin_ansible_callbacks = True
+load_callback_plugins = False # keep it avoid funny python errs environments                         
+
+[callback_default]
+result_format = yaml
+
+[ssh_connection]
+pipelining = True
 
