--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -19,13 +19,15 @@ all:
     sane1:      { ansible_host: 192.168.10.123, hostname: sane1 }
     nextcloud1: { ansible_host: 192.168.10.124, hostname: nextcloud1 }
     immich1:    { ansible_host: 192.168.10.125, hostname: immich1 }
-
+    pbs2:       { ansible_host: 192.168.10.250, hostname: pbs2 }
   children:
     pves:
       hosts:
         pve:
         pve2:
-
+    pbss:
+      hosts:
+        pbs2:
     vms:
       children:
         workstation_servers:
