--- a/ansible/playbooks/common/bootstrap-all.yml
+++ b/ansible/playbooks/common/bootstrap-all.yml
@@ -3,10 +3,12 @@
   become: true
 
   roles:
+    - common-role
     - bootstrap
     - harden
 
 
 
-#For new server's this seems to bootstrap ansible user well. No need to manual copy keys, assuming root log in is still enabled.
-#ansible-playbook playbooks/bootstrap.yml -u root -l pve2 --ask-become-pass
+# For new server's this seems to bootstrap ansible user well. No need to manual copy keys, \ 
+# assuming root log in is still enabled.
+  # ansible-playbook playbooks/common/bootstrap-all.yml -u root -l pbs2 -kk --check
