changed pass location

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -14,7 +14,7 @@ deprecation_warnings = True
 error_on_missing_handler = True
 # remote_tmp = /tmp/.ansible/tmp2
 
-vault_password_file = ~/.ansible/vault-pass
+vault_password_file = .ansible/vault-pass
 
 stdout_callback = ansible.builtin.default
 bin_ansible_callbacks = True
