added workstation starup

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,7 +2,7 @@
 display_skipped_hosts = false
 display_ok_hosts = false
 inventory = inventory.yml
-roles_path = roles/vm:roles/common:roles/helper:roles/pve
+roles_path = roles/vm:roles/common:roles/helper:roles/pve:roles/ansible-host
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
 host_key_checking = True    
