--- a/ansible/playbooks/ansible-host/setup-shell.yml
+++ b/ansible/playbooks/ansible-host/setup-shell.yml
@@ -2,10 +2,9 @@
 - name: Setup homelab shell on localhost
   hosts: localhost
   gather_facts: true
-  become: true
   roles:
-    - setup-shell
+    - setup-shell # Bootsraps handy shortcuts
 
-
+## ake the vault secret file in ansible project root
 # ansible-playbook  playbooks/ansible-host/setup-shell.yml
 # Test: source ~/.bashrc
