--- a/ansible/roles/vm/create-vm-template/defaults/main.yml
+++ b/ansible/roles/vm/create-vm-template/defaults/main.yml
@@ -1,15 +1,15 @@
 # roles/template-vm/defaults/main.yml
 # Template VM Settings
-template_vm_name: ubuntu-2404-template
-template_node: pve_servers
+template_vm_name: debian13-trixie-template
+template_node: pve
 template_storage: local-zfs
 template_disk_size: 32G
-template_memory: 1024
+template_memory: 512
 template_cores: 1
 template_sockets: 1
 template_net_bridge: vmbr0
 
 # Cloud-Init Image Info
-template_image_url: "https://cloud-images.ubuntu.com/minimal/releases/noble/release-20240423/ubuntu-24.04-minimal-cloudimg-amd64.img"
-template_image_file: ubuntu-24.04-minimal-cloudimg-amd64.img
-template_qcow2_name: ubuntu-24.04.qcow2
+# template_image_url: "https://cloud-images.ubuntu.com/minimal/releases/noble/release-20240423/ubuntu-24.04-minimal-cloudimg-amd64.img"
+template_image_url: "https://cloud.debian.org/images/cloud/trixie/latest/debian-13-genericcloud-amd64.qcow2"
+template_qcow2_name: debian13-trixie.qcow2
