Added authentik1 inventory

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -19,6 +19,7 @@ all:
     sane1:      { ansible_host: 192.168.10.123, hostname: sane1 }
     nextcloud1: { ansible_host: 192.168.10.124, hostname: nextcloud1 }
     immich1:    { ansible_host: 192.168.10.125, hostname: immich1 }
+    authentik1: { ansible_host: 192.168.10.126, hostname: authentik1 }
     pbs1:       { ansible_host: 192.168.10.251, hostname: pbs1 }
     pbs2:       { ansible_host: 192.168.10.250, hostname: pbs2 }
   children:
@@ -50,3 +51,4 @@ all:
             docker1:
             nextcloud1:
             immich1:
+            authentik1:
